# pygments-style-apprentice

./: .gitignore  .travis.yml  README.rst  setup.cfg
pygments_style_apprentice/: __init__.py  style.py
