[metadata]
name = pygments-style-apprentice
author = Martin Domke
summary = Apprentice style for Pygments
classifier =
  Environment :: Console
  Intended Audience :: Developers
  Operating System :: POSIX :: Linux
  Operating System :: MacOS :: MacOS X
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 3
  Topic :: Software Development :: Libraries

[files]
packages = pygments_style_apprentice

[entry_points]
pygments.styles =
  apprentice = pygments_style_apprentice:ApprenticeStyle
